1.4.3.dev
-----------------

- fix grouping of index servers, it is now done by name instead of 
  indexserver url, allowing to use it to separate dependencies
  into groups even if using the same default indexserver.
- look for "tox.ini" files in parent dirs of current dir (closes #34)


1.4.2
-----------------

- fix some tests which fail if /tmp is a symlink to some other place
- "python setup.py test" now runs tox tests via tox :)
  also added an example on how to do it for your project.

1.4.1
-----------------

- fix issue41 better quoting on windows - you can now use "<" and ">" in
  deps specifications, thanks Chris Withers for reporting

1.4
-----------------

- fix issue26 - no warnings on absolute or relative specified paths for commands
- fix issue33 - commentchars are ignored in key-value settings allowing
  for specifying commands like: python -c "import sys ; print sys"
  which would formerly raise irritating errors because the ";"
  was considered a comment
- tweak and improve reporting
- refactor reporting and virtualenv manipulation 
  to be more accessible from 3rd party tools
- support value substitution from other sections
  with the {[section]key} syntax
- fix issue29 - correctly point to pytest explanation
  for importing modules fully qualified
- fix issue32 - use --system-site-packages and don't pass --no-site-packages
- add python3.3 to the default env list, so early adopters can test
- drop python2.4 support (you can still have your tests run on
- fix the links/checkout howtos in the docs
  python-2.4, just tox itself requires 2.5 or higher.

1.3
-----------------

- fix: allow to specify wildcard filesystem paths when 
  specifying dependencies such that tox searches for 
  the highest version

- fix issue issue21: clear PIP_REQUIRES_VIRTUALENV which avoids
  pip installing to the wrong environment, thanks to bb's streeter

- make the install step honour a testenv's setenv setting
  (thanks Ralf Schmitt)


1.2
-----------------
